--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ a:hover {
   background: #FFFFFF;
   width: 600px;
   max-width: 100%;
-  margin: 0 auto;
+  border-spacing: 0;
   border-collapse: collapse;
 }
 
@@ -149,11 +149,11 @@ a:hover {
 .clearspotlight {
   background: #f2f2f2;
   width: 600px;
-  margin: 0 auto;
+  border-spacing: 0;
   border-collapse: collapse;
 }
 .clearspotlight #regional-spotlight {
-  margin: 0 auto;
+  border-spacing: 0;
   border-collapse: collapse;
 }
 .clearspotlight #spotlight-blurb {
@@ -166,7 +166,7 @@ a:hover {
   line-height: 1.25;
 }
 .clearspotlight #market-watch {
-  margin: 0 auto;
+  border-spacing: 0;
   border-collapse: collapse;
 }
 .clearspotlight .readmore-spotlight {
