--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,7 @@
 // Variables
 $base-font: Roboto, Helvetica, sans-serif;
 $condensed-font: 'Roboto Condensed', Roboto, sans-serif;
+$max-width: 600;
 
 // Colors
 $background-color: #65070C;
@@ -48,7 +49,7 @@ a:hover { text-decoration: underline !important; }
 #wrapper
 {	
     background: $white;
-	width: 600px;
+	width: $max-width * 1px;
 	display: block;
 	font-family: $base-font;
 	margin: 0 auto;
@@ -60,7 +61,7 @@ a:hover { text-decoration: underline !important; }
 .cleartable
 {
 	background: $white;
-	width: 600px;
+	width: $max-width * 1px;
 	max-width: 100%;
 	@include table-collapse;
 }
@@ -102,7 +103,7 @@ a:hover { text-decoration: underline !important; }
 		left: 0;
 		top: 0;
 		background: $background-color;
-		width: 264px;
+		width: $max-width * 0.44 * 1px;
 		height: 8px;
 		z-index: 10;
 	}
@@ -126,7 +127,7 @@ a:hover { text-decoration: underline !important; }
 {	
 	display: block;
 	height: 20px;
-	max-width: 434px;
+	max-width: (434/600) * $max-width * 1px;
 	color: $footer-gray;
 	white-space: nowrap;
 	overflow: hidden;
@@ -146,7 +147,7 @@ a:hover { text-decoration: underline !important; }
 .clearspotlight
 {	
 	background: $spotlight-gray;
-	width: 600px;
+	width: $max-width * 1px;
 	@include table-collapse;
 
 	#regional-spotlight
@@ -157,7 +158,7 @@ a:hover { text-decoration: underline !important; }
 	#spotlight-blurb
 	{
 		display: block;
-		max-width: 179px;
+		max-width: (179/600) * $max-width * 1px;
 		color: $footer-gray;
 		overflow: hidden;
 		font-weight: 500;
